--- a/Site/public/dash-estatica/dash-cadastros.html
+++ b/Site/public/dash-estatica/dash-cadastros.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Keep Swimming | Cadastro Funcionário</title>
 
-
+    <link rel="shortcut icon" href="./assets/icons/anchor_icon.ico" type="image/x-icon">
     <link rel="stylesheet" href="dash-cadastro.css">
     <link href='https://unpkg.com/boxicons@2.0.9/css/boxicons.min.css' rel='stylesheet'>
 
@@ -34,7 +34,7 @@
           <ul>
             <div class="active-tab"></div>
             <li class="tooltip-element" data-tooltip="0">
-              <a href="#" data-active="0">
+              <a href="./dashboard.html" data-active="0">
                 <div class="icon">
                   <i class='bx bx-notepad'></i>
                   <i class='bx bxs-notepad'></i>
@@ -43,7 +43,7 @@
               </a>
             </li>
             <li class="tooltip-element" data-tooltip="1">
-              <a href="dashboard.html" data-active="1">
+              <a href="./cadastroMaquina.html" data-active="1">
                 <div class="icon" href>
                   <i class='bx bx-card' ></i>
                   <i class='bx bxs-card' ></i>
@@ -61,7 +61,7 @@
               </a>
             </li>
             <li class="tooltip-element" data-tooltip="3">
-              <a href="#" data-active="3">
+              <a href="./graficos.html" data-active="3">
                 <div class="icon">
                   <i class='bx bx-bar-chart-square'></i>
                   <i class='bx bxs-bar-chart-square'></i>
