--- a/Site/public/dash-estatica/dashboard.html
+++ b/Site/public/dash-estatica/dashboard.html
@@ -7,12 +7,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Keep Swimming | Monitoramento</title>
 
-    <link rel="stylesheet" href="nav.css">
-    <!-- <link rel="stylesheet" href="dashboards.css"> -->
-    <script src="../assets/js/funcoes.js"></script>
-  <script src="../assets/js/dash.js" ></script>
 
-    <script src="../assets/js/login.js"></script>
+    <link href='https://unpkg.com/boxicons@2.0.9/css/boxicons.min.css' rel='stylesheet'>
+    <!-- <link rel="shortcut icon" href="./assets/icons/anchor_icon.ico" type="image/x-icon"> -->
+
+
+    <link rel="stylesheet" href="./cad-maquina.css">
+    <link rel="stylesheet" href="./nav.css">
+    <!-- <link rel="stylesheet" href="dashboards.css"> -->
+
+
     <!-- scripts do Chart.js -->
     <script type="text/javascript" src="https://www.chartjs.org/dist/2.8.0/Chart.min.js"></script>
     <!-- Bootstrap css -->
@@ -22,36 +26,130 @@
 
 </head>
 
- <body> 
-    <!-- Chama o metodo que so permite permanecer na pagina se tiver passado pelo login antes  -->
+<!-- <body> -->
+<!-- Chama o metodo que so permite permanecer na pagina se tiver passado pelo login antes  -->
 
-    <body onload="validarSessao(),  obterDadosGrafico()">
+<body onload="validarSessao(),  obterDadosGrafico()">
 
-    <div class="header">
-        <img src="../assets/icons/logo-padrao.png" alt="">
-        <div class="hello">
-            <h3>Olá, <span id="b_usuario"></span>!</h3>
+    <nav>
+        <div class="sidebar-top">
+            <span class="shrink-btn">
+                <i class='bx bx-chevron-left'></i>
+            </span>
+            <img src="../assets/icons/logoSemTexto.png" class="logo" alt="">
+            <h3 class="hide">KeepSwimming</h3>
         </div>
-    </div>
 
-    <div class="corpoDebaixo">
+        <div class="search">
 
-        <div id="sidebarMenu">
-            <ul class="sidebarMenuInner">
-                <li><b style="color:rgb(136, 136, 136)"> <img src="./dash.png" alt="" height="25px"> Dashboard</b></li>
-                <li><a href="graficos.html"><img src="./monitoramento.png" alt="" height="25px">Monitoramento</a></li>
-                <li><a href="dash-cadastros.html"><img src="./perfil.png" alt="" height="25px">Cadastrar
-                        Desenvolvedor</a></li>
-                <li><a href="./cadastroMaquina.html">Cadastro de maquina</a></li>
-                <li>
-                        <img src="./suporte.png" alt="" height="25px"> Suporte</a></li>
-                <li><a href="../index.html">
-                        <div class="sair" onclick="limparSessao()">
-                            <img src="./logout 1.png" alt="" height="50px">
+        </div>
+
+        <div class="sidebar-links">
+            <ul>
+                <div class="active-tab"></div>
+                <li class="tooltip-element" data-tooltip="0">
+                    <a href="./dashboard.html" data-active="0">
+                        <div class="icon">
+                            <i class='bx bx-notepad'></i>
+                            <i class='bx bxs-notepad'></i>
                         </div>
-                    </a></li>
+                        <span class="link hide">Dashboard</span>
+                    </a>
+                </li>
+
+                <li class="tooltip-element" data-tooltip="1">
+                    <a href="./cadastroMaquina.html" class="active" data-active="1">
+                        <div class="icon" href>
+                            <i class='bx bx-card'></i>
+                            <i class='bx bxs-card'></i>
+                        </div>
+                        <span class="link hide"> Máquina </span>
+                    </a>
+                </li>
+                <li class="tooltip-element" data-tooltip="2">
+                    <a href="./dash-cadastros.html" data-active="2">
+                        <div class="icon">
+                            <i class='bx bx-id-card'></i>
+                            <i class='bx bxs-id-card'></i>
+                        </div>
+                        <span class="link hide">Desenvolvedor</span>
+                    </a>
+                </li>
+                <li class="tooltip-element" data-tooltip="3">
+                    <a href="./graficos.html" data-active="3">
+                        <div class="icon">
+                            <i class='bx bx-bar-chart-square'></i>
+                            <i class='bx bxs-bar-chart-square'></i>
+                        </div>
+                        <span class="link hide">Monitoramento</span>
+                    </a>
+                </li>
+                <div class="tooltip">
+                    <span class="show">Dashboard</span>
+                    <span>Máquina</span>
+                    <span>Desenvolvedor</span>
+                    <span>Monitoramento</span>
+                </div>
+            </ul>
+
+            <h4 class="hide">Atalhos</h4>
+
+            <ul>
+                <!-- <li class="tooltip-element" data-tooltip="0"> -->
+                <a href="#" data-active="4">
+                    <div class="icon">
+                        <!-- <i class='bx bx-notepad'></i>
+                          <i class='bx bxs-notepad'></i> -->
+                    </div>
+                    <!-- <span class="link hide">Tasks</span> -->
+                </a>
+                </li>
+                <li class="tooltip-element" data-tooltip="1">
+                    <a href="https://app.pipefy.com/public/form/w7YSTr_A" data-active="5">
+                        <div class="icon">
+                            <i class='bx bx-help-circle'></i>
+                            <i class='bx bxs-help-circle'></i>
+                        </div>
+                        <span class="link hide">Suporte</span>
+                    </a>
+                </li>
+                <div class="tooltip">
+                    <span class="show"></span>
+                    <span>Suporte</span>
+                </div>
             </ul>
         </div>
+
+        <div class="sidebar-footer">
+            <a href="#" class="account tooltip-element" data-tooltip="0">
+                <i class='bx bx-user'></i>
+            </a>
+            <div class="admin-user tooltip-element" data-tooltip="1">
+                <div class="admin-profile hide">
+                    <img src="./img/face-1.png" alt="">
+                    <div class="admin-info">
+                        <div class="hello">
+                            <h3>Olá, <span id="b_usuario"></span>!</h3>
+                        </div>
+                    </div>
+                </div>
+                <a href="#" class="btn-logout" onclick="limparSessao()">
+                    <i class='bx bx-log-out'></i>
+                </a>
+            </div>
+            <div class="tooltip">
+                <span class="show">Raul
+                    <div class="hello">
+                        <h3>Olá, <span id="b_usuario"></span>!</h3>
+                    </div>
+                </span>
+                <span >Logout</span>
+            </div>
+        </div>
+    </nav>
+
+
+    <main>
 
         <div id='center' class="main center">
 
@@ -63,39 +161,7 @@
 
                     <div class="divMinisInfos">
 
-                        <!-- <div class="miniInfo">
 
-                            <div class="posisionamentoMiniInfo">
-
-                                <h4>Quantidade de devs:</h4>
-                                <span id="valorDvs" class="vlrMinInf">00</span>
-                                <h4>Quantidade de devs com problemas:</h4>
-                                <span id="valorDvs" class="vlrMinInf">00</span>
-                            </div>
-
-                            <div class="imgInfos">
-                                <img src="./imgs/dev.png" style="width: 10%;height: 10%; margin-left: 4%;">
-                                <img src="./imgs/stas.png" style="height: 30px;">
-                            </div>
-
-                        </div>
-
-                        <div class="miniInfo">
-
-                            <div class="posisionamentoMiniInfo">
-
-                                <h4>Quantidade de maquinas:</h4>
-                                <span id="valorMaq" class="vlrMinInf">00</span>
-                                <h4>Quantidade de maquinas com baixo desempenho:</h4>
-                                <span id="valorMaq" class="vlrMinInf">00</span>
-                            </div>
-
-                            <div class="imgInfos">
-                                <img src="./imgs/maquinas.png" style="width: 10%;height: 20%;">
-                                <img src="./imgs/stas.png" style="height: 30px;">
-                            </div> -->
-
-                        <!-- </div> -->
                         <div class="miniInfo">
 
                             <div class="posisionamentoMiniInfo">
@@ -131,12 +197,6 @@
 
                     </div>
 
-
-
-
-
-
-
                 </div>
 
             </div>
@@ -147,6 +207,8 @@
             <div class="centralizar">
 
                 <!-- Gráfico de Linhas -->
+
+
                 <div class="graph1">
                     <canvas id="chartBar"></canvas>
                 </div>
@@ -158,13 +220,24 @@
             </div>
 
         </div>
-    </div>
+
+
+    </main>
 
 
 </body>
 
 </html>
+
+<script src="./app.js"></script>
+<script src="../assets/js/funcoes.js"></script>
+
 <script src="../assets/js/dash.js"></script>
+<!-- <script src="../assets/js/login.js"></script> -->
+
+
+
+
 
 <!-- 
  <script>
