--- a/Site/public/suport.html
+++ b/Site/public/suport.html
@@ -9,7 +9,7 @@
     <script src="../assets/js/funcoes.js"></script>
     <link rel="stylesheet" href="./css/suport.css">
     <!-- <link rel="stylesheet" href="../css/index.css"> -->
-
+    <link rel="shortcut icon" href="./assets/icons/anchor_icon.ico" type="image/x-icon">
     <link rel="preconnect" href="https://fonts.gstatic.com">
 </head>
 
