--- a/Site/public/tela-login.html
+++ b/Site/public/tela-login.html
@@ -12,7 +12,7 @@
     <script src="./assets/js/funcoes.js"></script>
     <link rel="stylesheet" href="./css/tela-login.css">
     <!-- <link rel="stylesheet" href="../css/index.css"> -->
-
+    <link rel="shortcut icon" href="./assets/icons/anchor_icon.ico" type="image/x-icon">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;600&display=swap" rel="stylesheet">
