--- a/Site/public/dash-estatica/dashboard.html
+++ b/Site/public/dash-estatica/dashboard.html
@@ -12,8 +12,9 @@
     <!-- <link rel="shortcut icon" href="./assets/icons/anchor_icon.ico" type="image/x-icon"> -->
 
 
-    <link rel="stylesheet" href="./cad-maquina.css">
-    <link rel="stylesheet" href="./nav.css">
+    <!-- <link rel="stylesheet" href="./cad-maquina.css"> -->
+    <link rel="stylesheet" href="./nav.css"> 
+    <link rel="stylesheet" href="teste.css">
     <!-- <link rel="stylesheet" href="dashboards.css"> -->
 
 
@@ -149,7 +150,7 @@
     </nav>
 
 
-    <main>
+    
 
         <div id='center' class="main center">
 
@@ -222,7 +223,7 @@
         </div>
 
 
-    </main>
+   
 
 
 </body>
