feat -mural de top 10 processos

--- a/Site/public/dash-estatica/cadastroMaquina.html
+++ b/Site/public/dash-estatica/cadastroMaquina.html
@@ -38,7 +38,7 @@
       <ul>
         <div class="active-tab"></div>
         <li class="tooltip-element" data-tooltip="0">
-          <a href="./dashboard.html" data-active="0">
+          <a href="./dashnova.html" data-active="0">
             <div class="icon">
               <i class='bx bx-notepad'></i>
               <i class='bx bxs-notepad'></i>
