fix-css-cadastro

--- a/Site/public/tela-cadastro.html
+++ b/Site/public/tela-cadastro.html
@@ -47,7 +47,7 @@
         <div class="formulario">
                 <h2>Bem-vindo!</h2>
                 <form id="form_cadastro" method="post" onsubmit="return bt_cadastro()">
-
+                    <div class="roles">
                     <div class="ladoEsquerdo">
 
                         <div class="labels">
@@ -94,6 +94,8 @@
                             <button class="btn efeito">Navegar</button>
                         </div>
                     </div>
+                </div>
+                
                 </form>
             </div>
             <div id="div_aguardar" class="loading-div">
