--- a/Site/public/index.html
+++ b/Site/public/index.html
@@ -9,7 +9,7 @@
     <title>KEEP SWIMING</title>
 
     <script src="../assets/js/funcoes.js"></script>
-    <link rel="shortcut icon" href="./assets/icons/anchor_icon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="../assets/icons/leme.png" type="image/x-icon">
     <link rel="stylesheet" href="./css/index.css">
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta2/css/all.min.css">
