--- a/Site/public/dash-estatica/dashboard.html
+++ b/Site/public/dash-estatica/dashboard.html
@@ -24,13 +24,15 @@
     <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+  <link href='https://unpkg.com/boxicons@2.0.9/css/boxicons.min.css' rel='stylesheet'>
+
 
 </head>
 
-<!-- <body> -->
+<body>
 <!-- Chama o metodo que so permite permanecer na pagina se tiver passado pelo login antes  -->
 
-<body onload="validarSessao(),  obterDadosGrafico()">
+<!-- <body onload="validarSessao(),  obterDadosGrafico()"> -->
 
     <nav>
         <div class="sidebar-top">
