--- a/Site/public/dash-estatica/minhasInformacoes.html
+++ b/Site/public/dash-estatica/minhasInformacoes.html
@@ -153,25 +153,26 @@
 
             <div class="ladoEsquerdo">
 
-              <label for="hostName">HostName</label>
+              <label for="hostName">Nome</label>
               <input name="hostname" type="text" placeholder="Host name" id="hostname_ipt">
+              
 
-              <label for="idFuncionario">ID Funcionário</label>
+              <label for="idFuncionario">CNPJ</label>
               <input name="funcionarioId" type="text" placeholder="ID Funcionário" id="idfuncionario_ipt">
 
-              <label for="sistemaOperacional">Sistema Operacional</label>
+              <label for="sistemaOperacional">E-mail</label>
               <input name="sistemaOperacional" type="text" placeholder="Sistema Operacional"
                 id="sistemaoperacional_ipt">
 
                 
-              <label for="arquitetura">Arquitetura</label>
+              <label for="arquitetura">Celular</label>
               <input name="arquitetura" type="text" placeholder="32bits/64 bits" id="arquitetura_ipt">
 
-              <label for="permissao">Permissão</label>
+              <!-- <label for="permissao">Permissão</label>
               <input name="permissao" type="text" placeholder="true / false" id="permissao_ipt">
 
               <label for="fabricante">Fabricante</label>
-              <input name="fabricante" type="text" placeholder="GNU" id="fabricante_ipt">
+              <input name="fabricante" type="text" placeholder="GNU" id="fabricante_ipt"> -->
 
 
             </div>
@@ -182,8 +183,9 @@
             </div> -->
 
             <div class="div_botao">
-              <button class="btn efeito">Cadastrar</button>
+              <button class="btn efeito">Atualizar</button>
             </div>
+
 
 
           </div>
